--- a/toc.html
+++ b/toc.html
@@ -12,10 +12,10 @@
           
           <ul class="nav level1">
                 <li>
-                    <a href="TimeWarp.Blazor.Template/Overview.html" name="" title="TimeWarp-Blazor Template Overview">TimeWarp-Blazor Template Overview</a>
+                    <a href="TimeWarpBlazorTemplate/Overview.html" name="" title="TimeWarp-Blazor Template Overview">TimeWarp-Blazor Template Overview</a>
                 </li>
                 <li>
-                    <a>TimeWarp-Console Template Overview</a>
+                    <a href="TimeWarpConsoleTemplate/Overview.html" name="" title="TimeWarp-Console Template Overview">TimeWarp-Console Template Overview</a>
                 </li>
           </ul>
       </div>
