--- a/README.html
+++ b/README.html
@@ -66,6 +66,8 @@
 <p><a href="https://www.nuget.org/packages/TimeWarp.AspNetCore.Blazor.Templates/"><img src="https://img.shields.io/nuget/v/TimeWarp.AspNetCore.Blazor.Templates.svg" alt="NuGet"></a>
 <a href="https://www.nuget.org/packages/TimeWarp.AspNetCore.Blazor.Templates/"><img src="https://img.shields.io/nuget/dt/TimeWarp.AspNetCore.Blazor.Templates.svg" alt="NuGet"></a>
 <a href="https://timewarpenterprises.visualstudio.com/timewarp-templates/_build/latest?definitionId=20&amp;branchName=master"><img src="https://timewarpenterprises.visualstudio.com/timewarp-templates/_apis/build/status/TimeWarp.Blazor.Template?branchName=master" alt="Build Status"></a></p>
+<h3 id="documentation">Documentation</h3>
+<p><a href="https://timewarpengineering.github.io/timewarp-templates/TimeWarpBlazorTemplate/Overview.html">https://timewarpengineering.github.io/timewarp-templates/TimeWarpBlazorTemplate/Overview.html</a></p>
 <h3 id="installation">Installation</h3>
 <pre><code class="lang-console">dotnet new --install TimeWarp.AspNetCore.Blazor.Templates
 </code></pre>
@@ -88,6 +90,8 @@ EndToEnd.TestCafe.Tests - contains TestCafe based end-to-end tests.</p>
 <a href="https://www.nuget.org/packages/TimeWarp.Console.Template"><img src="https://img.shields.io/nuget/dt/TimeWarp.Console.Template.svg" alt="NuGet"></a>
 <a href="https://timewarpenterprises.visualstudio.com/timewarp-console/_build/latest?definitionId=19&amp;branchName=master"><img src="https://timewarpenterprises.visualstudio.com/timewarp-console/_apis/build/status/TimeWarpEngineering.timewarp-console?branchName=master" alt="Build Status"></a></p>
 <p>Console template for dotnet core applications utilizing MediatR</p>
+<h3 id="documentation-1">Documentation</h3>
+<p><a href="https://timewarpengineering.github.io/timewarp-templates/TimeWarpConsoleTemplate/Overview.html">https://timewarpengineering.github.io/timewarp-templates/TimeWarpConsoleTemplate/Overview.html</a></p>
 </article>
           </div>
           
