--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <a href="https://www.nuget.org/packages/TimeWarp.AspNetCore.Blazor.Templates/"><img src="https://img.shields.io/nuget/dt/TimeWarp.AspNetCore.Blazor.Templates.svg" alt="NuGet"></a>
 <a href="https://timewarpenterprises.visualstudio.com/timewarp-templates/_build/latest?definitionId=20&amp;branchName=master"><img src="https://timewarpenterprises.visualstudio.com/timewarp-templates/_apis/build/status/TimeWarp.Blazor.Template?branchName=master" alt="Build Status"></a></p>
 <h2 id="installation">Installation</h2>
-<pre><code class="lang-console">dotnet new --install TimeWarp.AspNetCore.Blazor.Templates::1.0.0-3.0.100-preview9-014004-104
+<pre><code class="lang-console">dotnet new --install TimeWarp.AspNetCore.Blazor.Templates::1.0.0-3.0.100-rc1-014190-100
 </code></pre>
 <h2 id="usage">Usage</h2>
 <p>To create new solution enter the following:</p>
